heimdall/heimdalldeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 2
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: vsanfile-heimdall
        persistentVolumeClaim:
          claimName: heimdall-pvc
      - name: heimdall-ssl
        secret:
          secretName: heimdall-tls-secret
      containers:
      - image: ghcr.io/linuxserver/heimdall
        name: heimdall
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-80
          protocol: TCP
        - containerPort: 443
          name: https-443
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: vsanfile-heimdall
          subPath: config
