heimdall/heimdallingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
spec:
  tls:
  - hosts:
    - heimdall.fistik.be
    secretName: heimdall-tls-secret
  rules:
  - host: heimdall.fistik.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
